--- a/SuperHeroAPI/appsettings.json
+++ b/SuperHeroAPI/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionStrings": { "DefaulthConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SuperHeroDb;Trusted_Connection=true" },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
